--- a/package.json
+++ b/package.json
@@ -45,5 +45,10 @@
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.0.0",
         "typescript": "~4.8.4"
+    },
+    "prettier": {
+        "singleQuote": true,
+        "tabWidth": 4,
+        "endOfLine": "auto"
     }
 }
